# openclaw-managed-runtime

./: .gitignore  CLAUDE.md  Dockerfile.orchestrator  Dockerfile.runtime  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: publish-images.yaml  test.yaml
docker/: apply-provider-config.mjs  apply-zenmux-provider-config.mjs  call-agent.mjs  entrypoint.sh  provider-prices.json
docker/confirm-tools-plugin/: index.js  openclaw.plugin.json  package.json
docker/egress-proxy/: Dockerfile  README.md  allowlist.mjs  allowlist.test.mjs  dns.mjs  dns.test.mjs  proxy.mjs
docs/: architecture.md  cloud-backends.md  deploying-on-aws-lightsail.md  deploying-on-hetzner.md
docs/designs/: cold-start-reduction.md  distributed-runtime.md  networking-limited.md
examples/research-assistant/: README.md  requirements.txt  research_assistant.py
scripts/: deploy-aws-lightsail.sh  deploy-gcp-compute.sh  deploy-hetzner.sh  rotate-api-token.sh  seed-demo.mjs  seed-sessions.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/openclaw_managed_agents/: __init__.py
sdk/typescript/: vitest.config.ts
src/: audit.ts  index.ts  log.test.ts  log.ts  metrics.test.ts  metrics.ts  model-aliases.json
src/orchestrator/: event-queue.ts  portal-v2.html  portal.ts  router.test.ts  router.ts  server.test.ts  server.ts  types.test.ts  types.ts  zenmux-pricing.ts
src/runtime/: apply-provider-config.test.ts  apply-zenmux-provider-config.test.ts  container-contract.test.ts  container.ts  (+8 more)
test/: e2e-multiround.sh  e2e-networking.sh  e2e.sh
(+10 files in other folders)
