[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-managed-agents"
version = "0.2.0"
description = "Python SDK for OpenClaw Managed Agents — the open alternative to Claude Managed Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "httpx-sse>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/stainlu/openclaw-managed-agents"
Documentation = "https://github.com/stainlu/openclaw-managed-agents#python-sdk"
Repository = "https://github.com/stainlu/openclaw-managed-agents"
